--- a/BlazorWebAssemblyApp/Pages/FetchData.razor
+++ b/BlazorWebAssemblyApp/Pages/FetchData.razor
@@ -1,57 +1,45 @@
 ﻿@page "/fetchdata"
-@inject HttpClient Http
 
+@inject HttpClient Http
+    
 <PageTitle>Weather forecast</PageTitle>
 
-<h1>Weather forecast</h1>
-
-<p>This component demonstrates fetching data from the server.</p>
-
-@if (forecasts == null)
-{
-    <p><em>Loading...</em></p>
-}
-else
-{
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-}
+<div class="col-md-6 col-lg-4 p-3">
+            <RadzenCard>
+                <RadzenText TextStyle="TextStyle.Subtitle2" TagName="TagName.H3">Enter User/Reponame</RadzenText>
+                <RadzenTextBox Change=@(args => OnChange(args, "TextBox")) Class="w-100" />
+            </RadzenCard>
+            <RadzenButton Text=@text Click=@OnButtonClick />
+</div>
 
 @code {
-    private WeatherForecast[]? forecasts;
+    string path;
+    string text = "Analyse";
 
-    protected override async Task OnInitializedAsync()
+    void OnChange(string value, string name)
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+        path =  "http://localhost:5258/downloadrepos/" + value;
+    }
+    async void OnButtonClick()
+    {
+        text = await OnInitializedAsync(path);
+    }   
+
+    protected async Task<Author> OnInitializedAsync(string path)
+    {
+        private Author[]? authors;
+
+        protected override async Task OnInitializedAsync() => 
+        authors = await Http.GetFromJsonAsync<Author[]>(path);
     }
 
-    public class WeatherForecast
-    {
-        public DateTime Date { get; set; }
+    public class Author {
+        public string AuthorId { get; set; }
+        public List<Commit> AuthorCommits { get; set; }
+    }
 
-        public int TemperatureC { get; set; }
-
-        public string? Summary { get; set; }
-
-        public int TemperatureF => 32 + (int)(TemperatureC / 0.5556);
+    public class Commit {
+        public int totalCommits { get; set; }
+        public string commitDate { get; set; }
     }
 }
