--- a/BlazorWebAssemblyApp/_Imports.razor
+++ b/BlazorWebAssemblyApp/_Imports.razor
@@ -10,3 +10,7 @@
 @using BlazorWebAssemblyApp.Shared
 @using Radzen
 @using Radzen.Blazor
+@using System.Text.Json
+@using System.Text.Json.Serialization
+@using System.Net.Http
+@using System.Net.Http.Json
